spacing correction

--- a/style.css
+++ b/style.css
@@ -48,8 +48,7 @@ body {
     overflow-x: hidden;
 }
 
-#landing-area,
-#contact {
+#landing-area{
     max-width: 1200px;
     margin: 11em auto 0;
 }
@@ -202,7 +201,7 @@ nav a {
 #work {
     width: 100%;
     max-width: 100vw;
-    margin: 17em auto;
+    margin: 17em auto 4em;
 }
 
 .work-title {
@@ -389,6 +388,10 @@ nav a {
 }
 
 /*----- Contact ------*/
+#contact {
+    max-width: 1200px;
+    margin: auto;
+}
 .contact-container {
     display: flex;
     flex-direction: column;
